fix: spacing of mw-content

--- a/src/scss/components/_blog-post.scss
+++ b/src/scss/components/_blog-post.scss
@@ -2,7 +2,7 @@
 @use '../abstracts' as *;
 
 .mw-blog-post {
-  margin-top: spacing('5');
+  margin-top: spacing('4');
   padding: spacing('3') spacing('5');
   animation: pageReveal 1.6s ease-out forwards;
   border-radius: radius('sm') radius('2xl') radius('sm') radius('2xl');
